--- a/app/src/main/res/layout/pixiv_label_selection.xml
+++ b/app/src/main/res/layout/pixiv_label_selection.xml
@@ -1,4 +1,4 @@
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -6,76 +6,76 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/pixiv_label_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="16dp" android:id="@+id/textInputLayout">
 
-        <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="0dp"
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextLabel"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="16dp" android:id="@+id/textInputLayout">
-
-            <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editTextLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="标签"
-                    app:backgroundTint="@color/overlay_color"
-                    android:padding="16dp"
-                    android:minHeight="48dp"
-            />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.button.MaterialButton
-                android:id="@+id/buttonAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="添加"
+                android:hint="标签"
                 app:backgroundTint="@color/overlay_color"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="16dp"
-                android:padding="8dp" android:layout_marginBottom="5dp"
-                app:layout_constraintBottom_toTopOf="@+id/chipGroupLabels"/>
+                android:padding="16dp"
+                android:minHeight="48dp"
+        />
 
-        <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipGroupLabels"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="16dp"
-                android:padding="8dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="添加"
+            app:backgroundTint="@color/overlay_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="16dp"
+            android:padding="8dp" android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toTopOf="@+id/chipGroupLabels"/>
+
+    <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroupLabels"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="16dp"
+            android:padding="8dp"/>
+
+    <ScrollView
+            android:id="@+id/scrollViewLabels"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/chipGroupLabels"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/pixiv_Label_Return_Button"
+            android:layout_margin="16dp">
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewLabels"
-                android:layout_width="379dp"
-                android:layout_height="508dp"
-                app:layout_constraintTop_toBottomOf="@+id/chipGroupLabels"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_margin="16dp" app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintHorizontal_bias="0.781"/>
-        <Button
-                android:id="@+id/pixiv_Label_Return_Button"
-                android:layout_width="379dp"
-                android:layout_height="48dp"
-                android:text="完成！"
-                android:textColor="@color/text_colors"
-                android:layout_gravity="end"
-                style="@style/RoundedCorner"
-                app:backgroundTint="@color/overlay_color"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerViewLabels"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-        />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+    </ScrollView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    <Button
+            android:id="@+id/pixiv_Label_Return_Button"
+            android:layout_width="379dp"
+            android:layout_height="48dp"
+            android:text="完成！"
+            android:textColor="@color/text_colors"
+            android:layout_gravity="end"
+            android:layout_marginBottom="16dp"
+            style="@style/RoundedCorner"
+            app:backgroundTint="@color/overlay_color"
+            app:layout_constraintTop_toBottomOf="@+id/scrollViewLabels"
+            android:layout_marginTop="44dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
