--- a/app/src/main/res/layout/generate_from_pixiv.xml
+++ b/app/src/main/res/layout/generate_from_pixiv.xml
@@ -71,6 +71,7 @@
                         android:textColor="@color/text_colors"
                         android:layout_marginBottom="8dp"/>
                 <TextView
+                        android:id="@+id/pixiv_Tag_Text_View"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="显示内容"
