--- a/app/src/main/res/layout/generate_from_pixiv.xml
+++ b/app/src/main/res/layout/generate_from_pixiv.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/generate_from_pixiv_wide_screen_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="横向屏幕模式"
+                    android:text="电脑壁纸"
                     android:textColor="@color/text_colors"
                     app:backgroundTint="@color/overlay_color"
                     android:layout_marginBottom="2dp"
@@ -40,7 +40,7 @@
                     android:id="@+id/generate_from_pixiv_normal_screen_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="竖向屏幕模式"
+                    android:text="手机壁纸"
                     android:textColor="@color/text_colors"
                     app:backgroundTint="@color/overlay_color"
                     android:layout_marginTop="2dp"
@@ -98,14 +98,29 @@
                         android:layout_marginBottom="16dp"/>
 
                 <!--生成数量板块-->
-                <Spinner
-                        android:id="@+id/spinner"
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:minHeight="48dp"/>
+                        android:orientation="horizontal"
+                        android:layout_marginTop="16dp">
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="生成数量"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginEnd="8dp"/>
+
+                    <NumberPicker
+                            android:id="@+id/pixiv_input_number_picker"
+                            android:layout_width="0dp"
+                            android:layout_height="54dp"
+                            android:layout_weight="1"
+                            android:minHeight="48dp"/>
+                </LinearLayout>
+
                 <CheckBox
-                        android:id="@+id/ai_generate_checkbox"
+                        android:id="@+id/exclude_ai_checkbox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="允许AI生成的作品"
@@ -116,6 +131,7 @@
         </androidx.cardview.widget.CardView>
 
         <Button
+                android:id="@+id/pixiv_generate_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
