--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,10 +6,10 @@
 
     <TextView
             android:id="@+id/WelcomeText"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24sp"
-            android:layout_marginStart="20sp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="20dp"
             android:text="@string/welcome_text"
             android:textColor="@color/welcome_text_colors"
             app:layout_constraintTop_toTopOf="parent"
@@ -18,11 +18,11 @@
             app:layout_constraintHorizontal_bias="0.066"/>
 
     <androidx.cardview.widget.CardView
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16sp"
-            app:cardCornerRadius="8sp"
-            app:cardElevation="4sp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
             android:background="@android:color/white"
             android:alpha="0.8"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +35,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="16sp">
+                android:padding="16dp">
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="今日推荐"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textColor="@color/text_colors"/>
 
             <TextView
@@ -51,14 +51,14 @@
                     android:text="图片信息"
                     android:textSize="14sp"
                     android:textColor="@color/text_colors"
-                    android:layout_marginBottom="1sp"/>
+                    android:layout_marginBottom="1dp"/>
 
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="0sp"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
-                    app:cardCornerRadius="8sp"
-                    android:layout_marginTop="8sp">
+                    app:cardCornerRadius="8dp"
+                    android:layout_marginTop="8dp">
 
                 <ImageView
                         android:id="@+id/todayImage"
@@ -74,9 +74,9 @@
     <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="152dp"
-            android:layout_margin="16sp"
-            app:cardCornerRadius="8sp"
-            app:cardElevation="4sp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             android:alpha="0.8"
@@ -86,14 +86,15 @@
             android:id="@+id/apiContentCardView"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8sp"
-            app:layout_constraintVertical_bias="0.047"
+            android:layout_marginBottom="8dp"
+
+            app:layout_constraintVertical_bias="0.046"
             app:layout_constraintWidth_percent="0.4"
-            app:layout_constraintHeight_percent="0.41">
+            app:layout_constraintHeight_percent="0.4">
 
         <ImageView
-                android:layout_width="79sp"
-                android:layout_height="79sp"
+                android:layout_width="79dp"
+                android:layout_height="79dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/card_api"
                 android:background="@drawable/rounded_corner"/>
@@ -103,24 +104,25 @@
     <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="152dp"
-            android:layout_margin="16sp"
-            app:cardCornerRadius="8sp"
-            app:cardElevation="4sp"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             android:alpha="0.8"
             app:layout_constraintStart_toEndOf="@+id/apiContentCardView"
             app:layout_constraintTop_toBottomOf="@+id/todayImageCardView"
             android:id="@+id/latencyContentCardView"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8sp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintVertical_bias="0.046"
             app:layout_constraintWidth_percent="0.4"
-            app:layout_constraintHeight_percent="0.41">
+            app:layout_constraintHeight_percent="0.4">
 
         <ImageView
-                android:layout_width="79sp"
-                android:layout_height="79sp"
+                android:layout_width="79dp"
+                android:layout_height="79dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/card_latency"
                 android:background="@drawable/rounded_corner"/>
