--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -8,6 +8,15 @@
               android:paddingEnd="16dp"
               android:paddingBottom="16dp">
 
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyle"
+            android:indeterminate="true"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginEnd="16dp"/>
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -16,14 +25,10 @@
             android:textColor="@android:color/black"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="16dp"/>
-    <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="?android:attr/progressBarStyle"
-            android:indeterminate="true"
-            android:layout_marginTop="3dp"
-            android:layout_marginStart="13dp"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"/>
+
+
 </LinearLayout>
 
         <!--<ProgressBar
