--- a/app/src/main/res/layout/activity_image_showcase.xml
+++ b/app/src/main/res/layout/activity_image_showcase.xml
@@ -8,7 +8,7 @@
             android:id="@+id/image_show_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
