--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
                                                    android:layout_height="match_parent">
 
     <TextView
-            android:id="@+id/WelcomeText"
+            android:id="@+id/welcome_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -18,6 +18,7 @@
             app:layout_constraintHorizontal_bias="0.066"/>
 
     <androidx.cardview.widget.CardView
+            android:id="@+id/today_image_cardview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -27,8 +28,7 @@
             android:alpha="0.8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/WelcomeText"
-            android:id="@+id/todayImageCardView"
+            app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
             app:layout_constraintWidth_percent="0.9">
 
         <LinearLayout
@@ -61,7 +61,7 @@
                     android:layout_marginTop="8dp">
 
                 <ImageView
-                        android:id="@+id/todayImage"
+                        android:id="@+id/today_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
@@ -72,6 +72,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+            android:id="@+id/api_content_cardView"
             android:layout_width="0dp"
             android:layout_height="152dp"
             android:layout_margin="16dp"
@@ -81,9 +82,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:alpha="0.8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/latencyContentCardView"
-            app:layout_constraintTop_toBottomOf="@+id/todayImageCardView"
-            android:id="@+id/apiContentCardView"
+            app:layout_constraintEnd_toStartOf="@+id/latency_content_cardView"
+            app:layout_constraintTop_toBottomOf="@+id/today_image_cardview"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
@@ -92,16 +92,39 @@
             app:layout_constraintWidth_percent="0.4"
             app:layout_constraintHeight_percent="0.4">
 
-        <ImageView
-                android:layout_width="79dp"
-                android:layout_height="79dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/card_api"
-                android:background="@drawable/rounded_corner"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+            <ImageView
+                    android:id="@+id/api_view_image"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="75dp"
+                    android:layout_height="71dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/card_api"
+                    android:background="@drawable/rounded_corner"/>
+
+            <TextView
+                    android:id="@+id/text_view_api"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="5个API (内置)"
+                    android:textSize="20sp"
+            />
+
+        </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+            android:id="@+id/latency_content_cardView"
             android:layout_width="0dp"
             android:layout_height="152dp"
             android:layout_margin="16dp"
@@ -110,9 +133,8 @@
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             android:alpha="0.8"
-            app:layout_constraintStart_toEndOf="@+id/apiContentCardView"
-            app:layout_constraintTop_toBottomOf="@+id/todayImageCardView"
-            android:id="@+id/latencyContentCardView"
+            app:layout_constraintStart_toEndOf="@+id/api_content_cardView"
+            app:layout_constraintTop_toBottomOf="@+id/today_image_cardview"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
@@ -120,12 +142,30 @@
             app:layout_constraintWidth_percent="0.4"
             app:layout_constraintHeight_percent="0.4">
 
-        <ImageView
-                android:layout_width="79dp"
-                android:layout_height="79dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/card_latency"
-                android:background="@drawable/rounded_corner"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <ImageView
+                    android:id="@+id/image_view_latenacy"
+                    android:layout_width="79dp"
+                    android:layout_height="79dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/card_latency"
+                    android:background="@drawable/rounded_corner"/>
+
+            <TextView
+                    android:id="@+id/text_view_latency"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="未定义 延迟"
+                    android:textSize="20sp"
+            />
+
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
