--- a/app/src/main/res/layout/pixiv_label_selection.xml
+++ b/app/src/main/res/layout/pixiv_label_selection.xml
@@ -10,9 +10,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
+            app:layout_constraintEnd_toStartOf="@+id/tag_button"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="16dp" android:id="@+id/textInputLayout">
+            android:layout_margin="16dp" android:id="@+id/text_input_layout">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextLabel"
@@ -27,7 +27,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonAdd"
+            android:id="@+id/tag_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="添加"
@@ -36,26 +36,26 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="16dp"
             android:padding="8dp" android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/chipGroupLabels"/>
+            app:layout_constraintBottom_toTopOf="@+id/chip_group_labels"/>
 
     <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupLabels"
+            android:id="@+id/chip_group_labels"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="16dp"
             android:padding="8dp"/>
 
     <ScrollView
-            android:id="@+id/scrollViewLabels"
+            android:id="@+id/scroll_view_labels"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/chipGroupLabels"
+            app:layout_constraintTop_toBottomOf="@+id/chip_group_labels"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/pixiv_Label_Return_Button"
+            app:layout_constraintBottom_toTopOf="@+id/pixiv_label_return_button"
             android:layout_margin="16dp">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -65,7 +65,7 @@
     </ScrollView>
 
     <Button
-            android:id="@+id/pixiv_Label_Return_Button"
+            android:id="@+id/pixiv_label_return_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="完成！"
@@ -77,7 +77,7 @@
             android:padding="8dp"
             style="@style/RoundedCorner"
             app:backgroundTint="@color/overlay_color"
-            app:layout_constraintTop_toBottomOf="@+id/scrollViewLabels"
+            app:layout_constraintTop_toBottomOf="@+id/scroll_view_labels"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
