--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,7 +10,7 @@
             android:icon="@drawable/baseline_auto_fix_high_24"
             android:title="生成" />
 
-    <item
+    <!--<item
             android:id="@+id/nav_waterfall"
             android:icon="@drawable/baseline_dashboard_24"
             android:title="瀑布流" />
@@ -18,6 +18,6 @@
     <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/baseline_settings_24"
-            android:title="设置" />
+            android:title="设置" />-->
 
 </menu>
